--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.lzh0379</groupId>
+            <artifactId>jdatepicker</artifactId>
+            <version>2.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
